2015-03-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc: Trap SIGINT.
	(cleanup): Kill the subshell that launched ginfo and delete FIFO 
	file for communicating that subshell was finished.
	* info/t/Timeout-test.inc: Clear SUBSHELL shell variable.

2015-03-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (info_get_info_help_node): If in a help
	window, close it before loading the tutorial.

2015-03-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-stnd.texi (infokey format): Example .infokey changed 
	to include "ESC u" for clearing search highlight.  Line setting 
	scroll-step to its default value removed.  Suggest keys Up and 
	Down to scroll up and down.

2015-03-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc: Create a background process to hold a 
	FIFO open for writing, instead of opening it read-write for 
	pseudotty.
	Eliminate extra invocation of mknod.  Remove extra shell 
	variable with same value as another.
	* info/t/Init-test.inc (cleanup): Kill this background process.

	* info/pseudotty.c: Exit for end-of-file on either of the file 
	descriptors being used.

	* info/t/index-apropos.sh, info/t/last-no-history.sh, 
	info/t/next-quoted.sh, info/t/quoted-label-and-target.sh, 
	info/t/quoted-label-as-target.sh, info/t/quoted-target.sh: Run 
	ginfo with "run_ginfo" and source t/Timeout-test.inc.

2015-03-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Invoking texi2any): Change a cross-reference 
	to explain customization variables.

2015-03-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodemenu.c (nodemenu_format_info): Add note for 
	translators.
	* doc/texinfo.texi (Writing a Node): Fix minor typo.

2015-02-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c (open_possibly_compressed_file): 
	If file is compressed, close it before opening it again on 
	stdin.
	(format_entry): Remove unused local variable.