@@ -2,7 +2,7 @@
    $Id$
 
    Copyright 1993, 1997, 1998, 2000, 2002, 2003, 2004, 2007, 2008, 2009, 2011,
-   2012, 2013, 2014 Free Software Foundation, Inc.
+   2012, 2013, 2014, 2015 Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -217,7 +217,11 @@ infopath_add (char *path)
 char *
 infopath_next (int *idx)
 {
-  INFO_DIR *entry = infodirs[(*idx)++];
+  INFO_DIR *entry;
+ 
+  if (!infodirs)
+   return 0;
+  entry = infodirs[(*idx)++];
   if (!entry)
     return 0;
   return entry->name;
